# vearch

.github/workflows/: test_pysdk.yml
scripts/benchmarks/: pysdk.py  restful.py
sdk/python/: pyproject.toml
sdk/python/test/: config.py
sdk/python/vearch/: config.py
sdk/python/vearch/core/: client.py  space.py
