[tool.poetry]
name = "vearch-sdk-python"
version = "0.1.2"
description = "refactor python sdk"
authors = ["liutao420 <liutao420@jd.com>"]
readme = "README.md"
packages = [{ include = "vearch" }]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
requests = "^2.32.3"
pandas = "^2.2.2"
pytest = "^8.3.3"
pyyaml = "^6.0.2"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
